# mani_test

./: CMakeLists.txt  README.md
msg/: Mdata.msg
scripts/: mani_publisher.py  mani_subscriber.py
